# crm_project

./: pyproject.toml
config/: urls.py
config/settings/: .env  base.py  local.py
counsel/: forms.py  models.py  serializers.py  urls.py  views.py
counsel/migrations/: 0001_initial.py
customer/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py
static/css/: base.css
templates/: base.html
templates/customer/: customer_create.html  customer_detail.html  customer_list.html  customer_update.html
utils/: search.py
